src/test/ui/issues/70000-79999/issue-74086.rs
fn main() {
    static BUG: fn(_) -> u8 = |_| 8;
    //~^ ERROR the type placeholder `_` is not allowed within types on item signatures [E0121]
}
